--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,5 +16,10 @@ RoxygenNote: 7.1.1
 Imports: 
     dplyr
 Suggests: 
+    rmarkdown,
+    knitr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Depends: 
+    R (>= 2.10)
+VignetteBuilder: knitr
