--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,19 +7,10 @@ Authors@R:
            role = c("cre", "aut"),
            email = "andrea.melloncelli@vanlog.it")
 Description: This is my cool package.
-License: LGPL (>= 3)
+License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
+    license
 URL: https://github.com/andreamelloncelli/myShapes
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Imports: 
-    dplyr
-Suggests: 
-    rmarkdown,
-    knitr,
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
-Depends: 
-    R (>= 2.10)
-VignetteBuilder: knitr
